--- a/Android Application/app/src/main/res/layout/activity_main.xml
+++ b/Android Application/app/src/main/res/layout/activity_main.xml
@@ -7,70 +7,53 @@
     tools:context=".MainActivity">
 
     <Button
+        android:id="@+id/goToAlarm"
+        android:layout_width="178dp"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="48dp"
+        android:onClick="toAlarmButtonPressed"
+        android:text="Go to Alarm"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/rainbomButton" />
+
+    <Button
         android:id="@+id/rainbomButton"
         android:layout_width="180dp"
         android:layout_height="wrap_content"
-        android:layout_marginTop="64dp"
+        android:layout_marginTop="48dp"
         android:onClick="rainbowButtonClicked"
-        android:text="Rainbow"
+        android:text="Make a Rainbow"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/addNewIP" />
-
-    <TextView
-        android:id="@+id/IPText"
-        android:layout_width="94dp"
-        android:layout_height="26dp"
-        android:layout_marginLeft="28dp"
-        android:layout_marginStart="28dp"
-        android:layout_marginTop="92dp"
-        android:text="Add new IP :"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toBottomOf="@+id/welcomeMessage" />
 
     <Button
-        android:id="@+id/addNewIP"
+        android:id="@+id/SyncCalendar"
         android:layout_width="178dp"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="112dp"
-        android:onClick="addIP"
-        android:text="Add IP"
+        android:layout_height="48dp"
+        android:layout_marginBottom="8dp"
+        android:layout_marginTop="32dp"
+        android:onClick="toAlarmButtonPressed"
+        android:text="Sync Calendar"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/IPText" />
+        app:layout_constraintTop_toBottomOf="@+id/goToAlarm" />
 
-    <EditText
-        android:id="@+id/IP"
-        android:layout_width="226dp"
-        android:layout_height="21dp"
-        android:layout_marginBottom="8dp"
+    <TextView
+        android:id="@+id/welcomeMessage"
+        android:layout_width="314dp"
+        android:layout_height="59dp"
         android:layout_marginEnd="8dp"
         android:layout_marginLeft="8dp"
         android:layout_marginRight="8dp"
         android:layout_marginStart="8dp"
-        android:layout_marginTop="92dp"
-        android:background="#FFFFFF"
-        android:ems="10"
-        android:inputType="text"
-        app:layout_constraintBottom_toTopOf="@+id/addNewIP"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.0"
-        app:layout_constraintStart_toEndOf="@+id/IPText"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.045" />
-
-    <Button
-        android:id="@+id/GoToAlarm"
-        android:layout_width="178dp"
-        android:layout_height="wrap_content"
-        android:layout_marginBottom="8dp"
-        android:layout_marginTop="72dp"
-        android:onClick="toAlarmButtonPressed"
-        android:text="Go to Alarm"
-        app:layout_constraintBottom_toBottomOf="parent"
+        android:layout_marginTop="100dp"
+        android:text="Test "
+        android:textSize="20sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/rainbomButton"
-        app:layout_constraintVertical_bias="0.0" />
+        app:layout_constraintTop_toTopOf="parent" />
 
 </android.support.constraint.ConstraintLayout>
