--- a/Android Application/app/src/main/res/layout/activity_id_log_in.xml
+++ b/Android Application/app/src/main/res/layout/activity_id_log_in.xml
@@ -8,80 +8,82 @@
 
     <TextView
         android:id="@+id/IPText4"
-        android:layout_width="94dp"
-        android:layout_height="26dp"
-        android:layout_marginBottom="116dp"
+        android:layout_width="135dp"
+        android:layout_height="18dp"
+        android:layout_marginBottom="84dp"
         android:layout_marginEnd="8dp"
         android:layout_marginLeft="28dp"
         android:layout_marginRight="8dp"
         android:layout_marginStart="28dp"
         android:layout_marginTop="8dp"
         android:text="Add log in "
+        android:textSize="12sp"
         app:layout_constraintBottom_toTopOf="@+id/IPText3"
         app:layout_constraintEnd_toStartOf="@+id/CompanyLogIn"
-        app:layout_constraintHorizontal_bias="0.222"
+        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textView"
-        app:layout_constraintVertical_bias="1.0" />
+        app:layout_constraintVertical_bias="0.687" />
 
     <TextView
         android:id="@+id/IPText3"
-        android:layout_width="118dp"
+        android:layout_width="161dp"
         android:layout_height="25dp"
-        android:layout_marginBottom="104dp"
-        android:layout_marginEnd="8dp"
-        android:layout_marginLeft="16dp"
-        android:layout_marginRight="8dp"
-        android:layout_marginStart="16dp"
+        android:layout_marginBottom="124dp"
+        android:layout_marginLeft="28dp"
+        android:layout_marginStart="28dp"
         android:text="Add card number :"
+        android:textSize="12sp"
         app:layout_constraintBottom_toTopOf="@+id/addNewIP2"
-        app:layout_constraintEnd_toStartOf="@+id/IpDetailNumber"
-        app:layout_constraintHorizontal_bias="0.583"
         app:layout_constraintStart_toStartOf="parent" />
 
     <EditText
         android:id="@+id/IpDetailNumber"
-        android:layout_width="199dp"
-        android:layout_height="25dp"
-        android:layout_marginBottom="108dp"
-        android:layout_marginEnd="16dp"
+        android:layout_width="105dp"
+        android:layout_height="23dp"
+        android:layout_marginBottom="124dp"
+        android:layout_marginEnd="8dp"
         android:layout_marginLeft="8dp"
-        android:layout_marginRight="16dp"
+        android:layout_marginRight="8dp"
         android:layout_marginStart="8dp"
         android:background="#FFFFFF"
         android:ems="10"
+        android:hint="ID"
         android:inputType="text"
+        android:textSize="12sp"
         app:layout_constraintBottom_toTopOf="@+id/addNewIP2"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.0"
-        app:layout_constraintStart_toEndOf="@+id/IPText" />
+        app:layout_constraintHorizontal_bias="0.283"
+        app:layout_constraintStart_toEndOf="@+id/IPText3" />
 
     <Button
         android:id="@+id/addNewIP2"
-        android:layout_width="178dp"
-        android:layout_height="wrap_content"
+        android:layout_width="225dp"
+        android:layout_height="41dp"
         android:layout_marginBottom="44dp"
         android:onClick="addIdButtonClicked"
-        android:text="Add IP"
+        android:text="Confirm"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.377"
         app:layout_constraintStart_toStartOf="parent" />
 
     <EditText
         android:id="@+id/CompanyLogIn"
-        android:layout_width="220dp"
-        android:layout_height="46dp"
-        android:layout_marginBottom="104dp"
+        android:layout_width="178dp"
+        android:layout_height="37dp"
+        android:layout_marginBottom="116dp"
         android:layout_marginEnd="16dp"
         android:layout_marginRight="16dp"
         android:layout_marginTop="8dp"
         android:ems="10"
         android:hint="Company log in"
         android:inputType="textPersonName"
+        android:textSize="12sp"
         app:layout_constraintBottom_toTopOf="@+id/IpDetailNumber"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textView"
-        app:layout_constraintVertical_bias="1.0" />
+        app:layout_constraintVertical_bias="0.865" />
 
     <TextView
         android:id="@+id/textView"
@@ -91,8 +93,8 @@
         android:layout_marginLeft="8dp"
         android:layout_marginRight="8dp"
         android:layout_marginStart="8dp"
-        android:layout_marginTop="76dp"
-        android:text="Rainbom Meeting App"
+        android:layout_marginTop="56dp"
+        android:text=" App"
         android:textSize="24sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
