--- a/Android Application/app/src/main/res/layout/activity_main.xml
+++ b/Android Application/app/src/main/res/layout/activity_main.xml
@@ -10,12 +10,15 @@
         android:id="@+id/goToAlarm"
         android:layout_width="178dp"
         android:layout_height="wrap_content"
-        android:layout_marginTop="48dp"
+        android:layout_marginBottom="80dp"
+        android:layout_marginTop="80dp"
         android:onClick="toAlarmButtonPressed"
         android:text="Go to Alarm"
+        app:layout_constraintBottom_toTopOf="@+id/SyncCalendar"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/rainbomButton" />
+        app:layout_constraintTop_toBottomOf="@+id/rainbomButton"
+        app:layout_constraintVertical_bias="1.0" />
 
     <Button
         android:id="@+id/rainbomButton"
@@ -32,14 +35,12 @@
         android:id="@+id/SyncCalendar"
         android:layout_width="178dp"
         android:layout_height="48dp"
-        android:layout_marginBottom="8dp"
-        android:layout_marginTop="32dp"
-        android:onClick="toAlarmButtonPressed"
+        android:layout_marginBottom="56dp"
+        android:onClick="syncButtonClicked"
         android:text="Sync Calendar"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/goToAlarm" />
+        app:layout_constraintStart_toStartOf="parent" />
 
     <TextView
         android:id="@+id/welcomeMessage"
