--- a/Android Application/app/src/main/res/layout/activity_show_calendar_events.xml
+++ b/Android Application/app/src/main/res/layout/activity_show_calendar_events.xml
@@ -7,4 +7,31 @@
     tools:context=".ShowCalendarEvents">
 
 
+    <TextView
+        android:id="@+id/Description"
+        android:layout_width="310dp"
+        android:layout_height="38dp"
+        android:layout_marginEnd="36dp"
+        android:layout_marginLeft="8dp"
+        android:layout_marginRight="36dp"
+        android:layout_marginStart="8dp"
+        android:layout_marginTop="4dp"
+        android:text="TextView"
+        android:textSize="24sp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.966"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
+    <ListView
+        android:id="@+id/EventsList"
+        android:layout_width="368dp"
+        android:layout_height="494dp"
+        android:layout_marginBottom="8dp"
+        android:layout_marginTop="8dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/Description"
+        tools:layout_editor_absoluteX="8dp" />
+
+
 </android.support.constraint.ConstraintLayout>
