--- a/Android Application/app/src/main/res/layout/activity_setting_an_alarm_from_calendar.xml
+++ b/Android Application/app/src/main/res/layout/activity_setting_an_alarm_from_calendar.xml
@@ -37,7 +37,7 @@
         app:layout_constraintStart_toStartOf="parent" />
 
     <TextView
-        android:id="@+id/Title"
+        android:id="@+id/ContactName"
         android:layout_width="279dp"
         android:layout_height="41dp"
         android:layout_marginBottom="56dp"
