--- a/Android Application/app/src/main/res/layout/activity_show_calendar_events.xml
+++ b/Android Application/app/src/main/res/layout/activity_show_calendar_events.xml
@@ -8,7 +8,7 @@
 
 
     <TextView
-        android:id="@+id/Description"
+        android:id="@+id/Contacts"
         android:layout_width="310dp"
         android:layout_height="38dp"
         android:layout_marginEnd="36dp"
@@ -30,7 +30,7 @@
         android:layout_marginBottom="8dp"
         android:layout_marginTop="8dp"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/Description"
+        app:layout_constraintTop_toBottomOf="@+id/Contacts"
         tools:layout_editor_absoluteX="8dp" />
 
 
