--- a/Android Application/app/src/main/res/layout/activity_contact_list.xml
+++ b/Android Application/app/src/main/res/layout/activity_contact_list.xml
@@ -14,6 +14,7 @@
         android:layout_marginStart="76dp"
         android:layout_marginTop="8dp"
         android:text="Cancel"
+        android:onClick="cancelButtonPressed"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/ContactList" />
