--- a/FacialRecognitionApp/app/src/main/res/layout/fragment_camera.xml
+++ b/FacialRecognitionApp/app/src/main/res/layout/fragment_camera.xml
@@ -7,9 +7,52 @@
     android:layout_height="match_parent"
     tools:context=".MainActivity">
 
-    <RelativeLayout
+    <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="match_parent"
         android:orientation="vertical">
-    </RelativeLayout>
+
+        <SurfaceView
+            android:id="@+id/surfaceCamera"
+            android:layout_width="match_parent"
+            android:layout_height="237dp"
+            android:layout_weight="95"
+            android:gravity="center|center_vertical">
+
+        </SurfaceView>
+
+        <RelativeLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_weight="5"
+            android:orientation="horizontal">
+
+            <ImageButton
+                android:id="@+id/switchCamera"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                app:srcCompat="@drawable/ic_switch_camera"
+                android:background="@color/colorWhite"/>
+
+            <TextView
+                android:id="@+id/emotionText"
+                android:layout_width="364dp"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="20dp"
+                android:layout_marginTop="10dp"
+                android:layout_marginRight="20dp"
+                android:text="Your Emotion"
+                android:textAlignment="center"
+                android:textColor="@color/colorBlack"
+                android:textSize="25sp" />
+            <!--<ImageView-->
+            <!--android:id="@+id/testImage"-->
+            <!--android:layout_width="match_parent"-->
+            <!--android:layout_height="226dp"-->
+            <!--android:layout_weight="50"-->
+            <!--app:srcCompat="@mipmap/ic_launcher_foreground" />-->
+        </RelativeLayout>
+
+
+    </LinearLayout>
 </android.support.constraint.ConstraintLayout>
