--- a/FacialRecognitionApp/app/src/main/res/layout/result_list_row.xml
+++ b/FacialRecognitionApp/app/src/main/res/layout/result_list_row.xml
@@ -12,7 +12,7 @@
 
     <ImageView
         android:id="@+id/imageView"
-        android:layout_width="169dp"
+        android:layout_width="85dp"
         android:layout_height="wrap_content"
         android:contentDescription="@string/nav_header_desc"
         android:paddingTop="@dimen/nav_header_vertical_spacing"
@@ -21,23 +21,23 @@
 
     <TextView
         android:id="@+id/list_results_user"
-        android:layout_width="23dp"
+        android:layout_width="wrap_content"
         android:layout_height="match_parent"
         android:layout_weight="1"
         android:drawableLeft="@drawable/ic_user"
         android:gravity="center"
         android:paddingLeft="16dp"
         android:textColor="#000000"
-        android:textSize="16sp" />
+        android:textSize="12sp" />
 
     <TextView
         android:id="@+id/list_results_emotion"
-        android:layout_width="10dp"
+        android:layout_width="wrap_content"
         android:layout_height="match_parent"
         android:layout_weight="1"
         android:drawableLeft="@drawable/ic_emotion"
         android:gravity="center"
         android:paddingLeft="16dp"
         android:textColor="#000000"
-        android:textSize="16sp" />
+        android:textSize="12sp" />
 </LinearLayout>
