--- a/FacialRecognitionApp/app/src/main/res/values/array.xml
+++ b/FacialRecognitionApp/app/src/main/res/values/array.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <string-array name="availableAPIS">
-        <item>API 1</item>
+        <item>Affectiva</item>
         <item>API 2</item>
         <item>API 3</item>
         <item>API 4</item>
