--- a/FacialRecognitionApp/app/src/main/res/layout/activity_result_details.xml
+++ b/FacialRecognitionApp/app/src/main/res/layout/activity_result_details.xml
@@ -11,7 +11,7 @@
     <ImageView
         android:id="@+id/resultImage"
         android:layout_width="match_parent"
-        android:layout_height="226dp"
+        android:layout_height="488dp"
         android:layout_weight="50"
         app:srcCompat="@mipmap/ic_launcher_foreground" />
 
@@ -23,107 +23,37 @@
         android:padding="5dp">
 
         <LinearLayout
-            android:layout_width="fill_parent"
+            android:layout_width="169dp"
             android:layout_height="match_parent"
             android:orientation="vertical"
             android:padding="5dp">
-            <TextView
-                android:id="@+id/pictureID"
-                android:layout_width="180dp"
-                android:layout_height="wrap_content"
-                android:textSize="16sp" />
-            <TextView
-                android:id="@+id/age"
+            <ListView
+                android:id="@+id/details_List"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:textSize="16sp" />
-            <TextView
-                android:id="@+id/genre"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:textSize="16sp" />
+                android:layout_height="match_parent"
+                android:layout_marginLeft="20dp"
+                android:layout_marginRight="20dp"
+                android:layout_marginBottom="10dp"
+                android:layout_weight="1"></ListView>
 
-            <TextView
-                android:id="@+id/ethinicity"
-                android:layout_width="180dp"
-                android:layout_height="wrap_content"
-                android:textSize="16sp" />
+
         </LinearLayout>
 
         <LinearLayout
-            android:layout_width="187dp"
+            android:layout_width="wrap_content"
             android:layout_height="match_parent"
             android:orientation="vertical"
             android:padding="5dp">
-            <TextView
-                android:id="@+id/emotion_anger"
-                android:layout_width="match_parent"
-                android:layout_height="0dip"
-                android:layout_weight="50"
-                android:text="anger"
-                android:textSize="16sp" />
-            <TextView
-                android:id="@+id/emotion_contempt"
-                android:layout_width="match_parent"
-                android:layout_height="0dip"
-                android:layout_weight="50"
-                android:text="disgust"
-                android:textSize="16sp" />
 
-            <TextView
-                android:id="@+id/emotion_disgust"
+            <ListView
+                android:id="@+id/emotionList_list"
                 android:layout_width="match_parent"
-                android:layout_height="0dip"
-                android:layout_weight="50"
-                android:text="disgust"
-                android:textSize="16sp" />
-            <TextView
-                android:id="@+id/emotion_engagement"
-                android:layout_width="match_parent"
-                android:layout_height="0dip"
-                android:layout_weight="50"
-                android:text="disgust"
-                android:textSize="16sp" />
+                android:layout_height="match_parent"
+                android:layout_marginLeft="20dp"
+                android:layout_marginRight="20dp"
+                android:layout_marginBottom="10dp"
+                android:layout_weight="1"></ListView>
 
-            <TextView
-                android:id="@+id/emotion_fear"
-                android:layout_width="match_parent"
-                android:layout_height="0dip"
-                android:layout_weight="50"
-                android:text="fear"
-                android:textSize="16sp" />
-
-            <TextView
-                android:id="@+id/emotion_joy"
-                android:layout_width="match_parent"
-                android:layout_height="0dip"
-                android:layout_weight="50"
-                android:text="happiness"
-                android:textSize="16sp" />
-
-            <TextView
-                android:id="@+id/emotion_sadness"
-                android:layout_width="match_parent"
-                android:layout_height="0dip"
-                android:layout_weight="50"
-                android:text="sadness"
-                android:textSize="16sp" />
-
-            <TextView
-                android:id="@+id/emotion_surprise"
-                android:layout_width="match_parent"
-                android:layout_height="0dip"
-                android:layout_weight="50"
-                android:text="surprise"
-                android:textSize="16sp" />
-
-            <TextView
-                android:id="@+id/valence"
-                android:layout_width="match_parent"
-                android:layout_height="0dip"
-                android:layout_weight="50"
-                android:text="neutral"
-                android:textSize="16sp"/>
         </LinearLayout>
 
     </LinearLayout>
