--- a/FacialRecognitionApp/app/src/main/res/layout/result_list_row.xml
+++ b/FacialRecognitionApp/app/src/main/res/layout/result_list_row.xml
@@ -35,7 +35,7 @@
         android:layout_width="wrap_content"
         android:layout_height="match_parent"
         android:layout_weight="1"
-        android:drawableLeft="@drawable/ic_emotion"
+        android:drawableLeft="@drawable/ic_emotion_happy"
         android:gravity="center"
         android:paddingLeft="16dp"
         android:textColor="#000000"
