--- a/PhothoGalleryVisualizerApp/app/src/main/res/layout/fragment_photo_preview.xml
+++ b/PhothoGalleryVisualizerApp/app/src/main/res/layout/fragment_photo_preview.xml
@@ -7,35 +7,6 @@
     android:layout_height="match_parent"
     android:background="#FFFFFF">
 
-
-    <!--<RelativeLayout-->
-        <!--android:id="@+id/relative_container"-->
-        <!--android:layout_width="match_parent"-->
-        <!--android:layout_height="match_parent">-->
-        <!--<android.support.v4.widget.SwipeRefreshLayout-->
-            <!--android:id="@+id/swiperefresh"-->
-            <!--android:layout_width="wrap_content"-->
-            <!--android:layout_height="wrap_content"-->
-            <!--android:layout_weight="1">-->
-            <!--<com.jsibbold.zoomage.ZoomageView-->
-                <!--android:id="@+id/GalleryPreviewImg"-->
-                <!--android:layout_width="wrap_content"-->
-                <!--android:layout_height="match_parent"-->
-                <!--android:layout_alignParentStart="true"-->
-                <!--android:layout_alignParentTop="true"-->
-                <!--android:layout_marginStart="0dp"-->
-                <!--android:layout_marginTop="0dp"-->
-                <!--app:zoomage_animateOnReset="true"-->
-                <!--app:zoomage_autoCenter="true"-->
-                <!--app:zoomage_autoResetMode="UNDER"-->
-                <!--app:zoomage_maxScale="8"-->
-                <!--app:zoomage_minScale="0.6"-->
-                <!--app:zoomage_restrictBounds="false"-->
-                <!--app:zoomage_translatable="false"-->
-                <!--app:zoomage_zoomable="true"-->
-                <!--/>-->
-        <!--</android.support.v4.widget.SwipeRefreshLayout>-->
-    <!--</RelativeLayout>-->
     <LinearLayout
 
         android:id="@+id/relative_container"
@@ -62,15 +33,18 @@
                 android:layout_alignParentStart="true"
                 android:layout_alignParentTop="true"
                 android:layout_marginStart="0dp"
-                android:layout_marginTop="0dp"
+                android:layout_margin="10dp"
                 app:zoomage_animateOnReset="true"
                 app:zoomage_autoCenter="true"
                 app:zoomage_autoResetMode="UNDER"
                 app:zoomage_maxScale="8"
                 app:zoomage_minScale="0.6"
+                android:background="@color/colorWhite"
                 app:zoomage_restrictBounds="false"
                 app:zoomage_translatable="false"
                 app:zoomage_zoomable="true"
+                android:adjustViewBounds="true"
+                android:layout_centerInParent="true"
                 />
         </android.support.v4.widget.SwipeRefreshLayout>
         <Button
