--- a/PhothoGalleryVisualizerApp/app/src/main/res/layout/fragment_user_access.xml
+++ b/PhothoGalleryVisualizerApp/app/src/main/res/layout/fragment_user_access.xml
@@ -16,13 +16,16 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:text="Currently users gallery access:" />
-
-        <ListView
-            android:id="@+id/list_view"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent" />
-
-
+        <android.support.v4.widget.SwipeRefreshLayout
+            android:id="@+id/swiperefresh"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_weight="1">
+            <ListView
+                android:id="@+id/list_view"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent" />
+        </android.support.v4.widget.SwipeRefreshLayout>
     </LinearLayout>
 
     <android.support.design.widget.FloatingActionButton
